# OpenAPI-Specification.json
@@ -541,7 +541,7 @@
         "description": "강의 목록 조회 응답",
         "type": "object",
         "properties": {
-          "lectures": {
+          "items": {
             "type": "array",
             "items": {
               "description": "강의 목록 조회 아이템",
@@ -607,7 +607,7 @@
           }
         },
         "required": [
-          "lectures",
+          "items",
           "total",
           "page",
           "pageSize"
